// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rdme openapi GHA onboarding E2E tests should create GHA workflow (--create flag enabled with ignored id opt) 1`] = `
"
Your GitHub Action has been created! ✨

You're almost finished! Just a couple more steps:
1. Commit and push your newly created file (.github/workflows/openapi-file-create-flag-id-opt.yml) to GitHub 🚀
2. Create a GitHub secret called \`README_API_KEY\` and populate that with a ReadMe API key 🔑"
`;

exports[`rdme openapi GHA onboarding E2E tests should create GHA workflow (--create flag enabled with ignored id opt) 2`] = `
"# This GitHub Action workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`openapi-branch-create-flag-id-opt\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - openapi-branch-create-flag-id-opt

jobs:
  rdme-openapi:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v3

      - name: Run \`openapi\` command 🚀
        uses: readmeio/rdme@7.8.9
        with:
          rdme: openapi ./__tests__/__fixtures__/ref-oas/petstore.json --key=\${{ secrets.README_API_KEY }} --version=1.0.0 --create
"
`;

exports[`rdme openapi GHA onboarding E2E tests should create GHA workflow (--create flag enabled) 1`] = `
"
Your GitHub Action has been created! ✨

You're almost finished! Just a couple more steps:
1. Commit and push your newly created file (.github/workflows/openapi-file-create-flag.yml) to GitHub 🚀
2. Create a GitHub secret called \`README_API_KEY\` and populate that with a ReadMe API key 🔑"
`;

exports[`rdme openapi GHA onboarding E2E tests should create GHA workflow (--create flag enabled) 2`] = `
"# This GitHub Action workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`openapi-branch-create-flag\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - openapi-branch-create-flag

jobs:
  rdme-openapi:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v3

      - name: Run \`openapi\` command 🚀
        uses: readmeio/rdme@7.8.9
        with:
          rdme: openapi ./__tests__/__fixtures__/ref-oas/petstore.json --key=\${{ secrets.README_API_KEY }} --version=1.0.1 --create
"
`;

exports[`rdme openapi GHA onboarding E2E tests should create GHA workflow (--github flag enabled) 1`] = `
"
Your GitHub Action has been created! ✨

You're almost finished! Just a couple more steps:
1. Commit and push your newly created file (.github/workflows/openapi-file-github-flag.yml) to GitHub 🚀
2. Create a GitHub secret called \`README_API_KEY\` and populate that with a ReadMe API key 🔑"
`;

exports[`rdme openapi GHA onboarding E2E tests should create GHA workflow (--github flag enabled) 2`] = `
"# This GitHub Action workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`openapi-branch-github-flag\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - openapi-branch-github-flag

jobs:
  rdme-openapi:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v3

      - name: Run \`openapi\` command 🚀
        uses: readmeio/rdme@7.8.9
        with:
          rdme: openapi ./__tests__/__fixtures__/ref-oas/petstore.json --key=\${{ secrets.README_API_KEY }} --id=1
"
`;

exports[`rdme openapi GHA onboarding E2E tests should create GHA workflow (--update flag enabled) 1`] = `
"
Your GitHub Action has been created! ✨

You're almost finished! Just a couple more steps:
1. Commit and push your newly created file (.github/workflows/openapi-file-update-flag.yml) to GitHub 🚀
2. Create a GitHub secret called \`README_API_KEY\` and populate that with a ReadMe API key 🔑"
`;

exports[`rdme openapi GHA onboarding E2E tests should create GHA workflow (--update flag enabled) 2`] = `
"# This GitHub Action workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`openapi-branch-update-flag\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - openapi-branch-update-flag

jobs:
  rdme-openapi:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v3

      - name: Run \`openapi\` command 🚀
        uses: readmeio/rdme@7.8.9
        with:
          rdme: openapi ./__tests__/__fixtures__/ref-oas/petstore.json --key=\${{ secrets.README_API_KEY }} --id=1
"
`;

exports[`rdme openapi GHA onboarding E2E tests should create GHA workflow (create spec) 1`] = `
"
Your GitHub Action has been created! ✨

You're almost finished! Just a couple more steps:
1. Commit and push your newly created file (.github/workflows/openapi-file.yml) to GitHub 🚀
2. Create a GitHub secret called \`README_API_KEY\` and populate that with a ReadMe API key 🔑"
`;

exports[`rdme openapi GHA onboarding E2E tests should create GHA workflow (create spec) 2`] = `
"# This GitHub Action workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`openapi-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - openapi-branch

jobs:
  rdme-openapi:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v3

      - name: Run \`openapi\` command 🚀
        uses: readmeio/rdme@7.8.9
        with:
          rdme: openapi ./__tests__/__fixtures__/ref-oas/petstore.json --key=\${{ secrets.README_API_KEY }} --id=1
"
`;

exports[`rdme openapi GHA onboarding E2E tests should create GHA workflow (including workingDirectory) 1`] = `
"
Your GitHub Action has been created! ✨

You're almost finished! Just a couple more steps:
1. Commit and push your newly created file (.github/workflows/openapi-file-workingdirectory.yml) to GitHub 🚀
2. Create a GitHub secret called \`README_API_KEY\` and populate that with a ReadMe API key 🔑"
`;

exports[`rdme openapi GHA onboarding E2E tests should create GHA workflow (including workingDirectory) 2`] = `
"# This GitHub Action workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`openapi-branch-workingdirectory\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - openapi-branch-workingdirectory

jobs:
  rdme-openapi:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v3

      - name: Run \`openapi\` command 🚀
        uses: readmeio/rdme@7.8.9
        with:
          rdme: openapi petstore.json --key=\${{ secrets.README_API_KEY }} --id=1 --workingDirectory=./__tests__/__fixtures__/relative-ref-oas
"
`;

exports[`rdme openapi GHA onboarding E2E tests should create GHA workflow (update spec via prompt) 1`] = `
"
Your GitHub Action has been created! ✨

You're almost finished! Just a couple more steps:
1. Commit and push your newly created file (.github/workflows/openapi-file-update-prompt.yml) to GitHub 🚀
2. Create a GitHub secret called \`README_API_KEY\` and populate that with a ReadMe API key 🔑"
`;

exports[`rdme openapi GHA onboarding E2E tests should create GHA workflow (update spec via prompt) 2`] = `
"# This GitHub Action workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`openapi-branch-update-prompt\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - openapi-branch-update-prompt

jobs:
  rdme-openapi:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v3

      - name: Run \`openapi\` command 🚀
        uses: readmeio/rdme@7.8.9
        with:
          rdme: openapi ./__tests__/__fixtures__/ref-oas/petstore.json --key=\${{ secrets.README_API_KEY }} --id=spec2
"
`;

exports[`rdme openapi error handling should throw an error if an invalid OpenAPI 3.1 definition is supplied 1`] = `
[SyntaxError: OpenAPI schema validation failed.

REQUIRED must have required property 'name'

  24 |   "components": {
  25 |     "securitySchemes": {
> 26 |       "tlsAuth": {
     |                  ^ ☹️  name is missing here!
  27 |         "type": "mutualTLS"
  28 |       }
  29 |     }]
`;

exports[`rdme openapi error handling should throw an error if an invalid ref is supplied 1`] = `[MissingPointerError: Token "Petty" does not exist.]`;

exports[`rdme openapi upload should bundle and upload the expected content 1`] = `
Object {
  "components": Object {
    "securitySchemes": Object {
      "api_key": Object {
        "in": "header",
        "name": "api_key",
        "type": "apiKey",
      },
      "petstore_auth": Object {
        "flows": Object {
          "implicit": Object {
            "authorizationUrl": "http://petstore.swagger.io/oauth/dialog",
            "scopes": Object {
              "read:pets": "read your pets",
              "write:pets": "modify pets in your account",
            },
          },
        },
        "type": "oauth2",
      },
    },
  },
  "info": Object {
    "title": "Example petstore to demo our handling of external $ref pointers",
    "version": "1.0.0",
  },
  "openapi": "3.0.0",
  "paths": Object {
    "/pet": Object {
      "post": Object {
        "description": "",
        "operationId": "addPet",
        "requestBody": Object {
          "$ref": "#/paths/~1pet/put/requestBody",
        },
        "responses": Object {
          "405": Object {
            "description": "Invalid input",
          },
        },
        "security": Array [
          Object {
            "petstore_auth": Array [
              "write:pets",
              "read:pets",
            ],
          },
        ],
        "summary": "Add a new pet to the store",
        "tags": Array [
          "pet",
        ],
      },
      "put": Object {
        "description": "",
        "operationId": "updatePet",
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "$ref": "#/paths/~1pet~1%7BpetId%7D/get/responses/200/content/application~1xml/schema",
              },
            },
            "application/xml": Object {
              "schema": Object {
                "$ref": "#/paths/~1pet~1%7BpetId%7D/get/responses/200/content/application~1xml/schema",
              },
            },
          },
          "description": "Pet object that needs to be added to the store",
          "required": true,
        },
        "responses": Object {
          "400": Object {
            "description": "Invalid ID supplied",
          },
          "404": Object {
            "description": "Pet not found",
          },
          "405": Object {
            "description": "Validation exception",
          },
        },
        "security": Array [
          Object {
            "petstore_auth": Array [
              "write:pets",
              "read:pets",
            ],
          },
        ],
        "summary": "Update an existing pet",
        "tags": Array [
          "pet",
        ],
      },
    },
    "/pet/{petId}": Object {
      "get": Object {
        "description": "Returns a single pet",
        "operationId": "getPetById",
        "parameters": Array [
          Object {
            "description": "ID of pet to return",
            "in": "path",
            "name": "petId",
            "required": true,
            "schema": Object {
              "format": "int64",
              "type": "integer",
            },
          },
        ],
        "responses": Object {
          "200": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "$ref": "#/paths/~1pet~1%7BpetId%7D/get/responses/200/content/application~1xml/schema",
                },
              },
              "application/xml": Object {
                "schema": Object {
                  "properties": Object {
                    "category": Object {
                      "properties": Object {
                        "id": Object {
                          "format": "int64",
                          "type": "integer",
                        },
                        "name": Object {
                          "type": "string",
                        },
                      },
                      "type": "object",
                      "xml": Object {
                        "name": "Category",
                      },
                    },
                    "id": Object {
                      "default": 40,
                      "example": 25,
                      "format": "int64",
                      "type": "integer",
                    },
                    "name": Object {
                      "example": "doggie",
                      "type": "string",
                    },
                    "photoUrls": Object {
                      "items": Object {
                        "example": "https://example.com/photo.png",
                        "type": "string",
                      },
                      "type": "array",
                      "xml": Object {
                        "name": "photoUrl",
                        "wrapped": true,
                      },
                    },
                    "status": Object {
                      "description": "pet status in the store",
                      "enum": Array [
                        "available",
                        "pending",
                        "sold",
                      ],
                      "type": "string",
                    },
                    "tags": Object {
                      "items": Object {
                        "properties": Object {
                          "id": Object {
                            "format": "int64",
                            "type": "integer",
                          },
                          "name": Object {
                            "type": "string",
                          },
                        },
                        "type": "object",
                        "xml": Object {
                          "name": "Tag",
                        },
                      },
                      "type": "array",
                      "xml": Object {
                        "name": "tag",
                        "wrapped": true,
                      },
                    },
                  },
                  "required": Array [
                    "name",
                    "photoUrls",
                  ],
                  "type": "object",
                  "xml": Object {
                    "name": "Pet",
                  },
                },
              },
            },
            "description": "successful operation",
          },
          "400": Object {
            "description": "Invalid ID supplied",
          },
          "404": Object {
            "description": "Pet not found",
          },
          "default": Object {
            "description": "successful response",
          },
        },
        "security": Array [
          Object {
            "api_key": Array [],
          },
        ],
        "summary": "Find pet by ID",
        "tags": Array [
          "pet",
        ],
      },
    },
  },
  "servers": Array [
    Object {
      "url": "http://petstore.swagger.io/v2",
    },
  ],
}
`;

exports[`rdme openapi upload should use specified working directory and upload the expected content 1`] = `
Object {
  "components": Object {
    "securitySchemes": Object {
      "api_key": Object {
        "in": "header",
        "name": "api_key",
        "type": "apiKey",
      },
      "petstore_auth": Object {
        "flows": Object {
          "implicit": Object {
            "authorizationUrl": "http://petstore.swagger.io/oauth/dialog",
            "scopes": Object {
              "read:pets": "read your pets",
              "write:pets": "modify pets in your account",
            },
          },
        },
        "type": "oauth2",
      },
    },
  },
  "info": Object {
    "title": "Example petstore to demo our handling of relative external $ref pointers",
    "version": "1.0.0",
  },
  "openapi": "3.0.0",
  "paths": Object {
    "/pet": Object {
      "post": Object {
        "description": "",
        "operationId": "addPet",
        "requestBody": Object {
          "$ref": "#/paths/~1pet/put/requestBody",
        },
        "responses": Object {
          "405": Object {
            "description": "Invalid input",
          },
        },
        "security": Array [
          Object {
            "petstore_auth": Array [
              "write:pets",
              "read:pets",
            ],
          },
        ],
        "summary": "Add a new pet to the store",
        "tags": Array [
          "pet",
        ],
      },
      "put": Object {
        "description": "",
        "operationId": "updatePet",
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "$ref": "#/paths/~1pet~1%7BpetId%7D/get/responses/200/content/application~1xml/schema",
              },
            },
            "application/xml": Object {
              "schema": Object {
                "$ref": "#/paths/~1pet~1%7BpetId%7D/get/responses/200/content/application~1xml/schema",
              },
            },
          },
          "description": "Pet object that needs to be added to the store",
          "required": true,
        },
        "responses": Object {
          "400": Object {
            "description": "Invalid ID supplied",
          },
          "404": Object {
            "description": "Pet not found",
          },
          "405": Object {
            "description": "Validation exception",
          },
        },
        "security": Array [
          Object {
            "petstore_auth": Array [
              "write:pets",
              "read:pets",
            ],
          },
        ],
        "summary": "Update an existing pet",
        "tags": Array [
          "pet",
        ],
      },
    },
    "/pet/{petId}": Object {
      "get": Object {
        "description": "Returns a single pet",
        "operationId": "getPetById",
        "parameters": Array [
          Object {
            "description": "ID of pet to return",
            "in": "path",
            "name": "petId",
            "required": true,
            "schema": Object {
              "format": "int64",
              "type": "integer",
            },
          },
        ],
        "responses": Object {
          "200": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "$ref": "#/paths/~1pet~1%7BpetId%7D/get/responses/200/content/application~1xml/schema",
                },
              },
              "application/xml": Object {
                "schema": Object {
                  "properties": Object {
                    "category": Object {
                      "properties": Object {
                        "id": Object {
                          "format": "int64",
                          "type": "integer",
                        },
                        "name": Object {
                          "type": "string",
                        },
                      },
                      "type": "object",
                      "xml": Object {
                        "name": "Category",
                      },
                    },
                    "id": Object {
                      "default": 40,
                      "example": 25,
                      "format": "int64",
                      "type": "integer",
                    },
                    "name": Object {
                      "example": "doggie",
                      "type": "string",
                    },
                    "photoUrls": Object {
                      "items": Object {
                        "example": "https://example.com/photo.png",
                        "type": "string",
                      },
                      "type": "array",
                      "xml": Object {
                        "name": "photoUrl",
                        "wrapped": true,
                      },
                    },
                    "status": Object {
                      "description": "pet status in the store",
                      "enum": Array [
                        "available",
                        "pending",
                        "sold",
                      ],
                      "type": "string",
                    },
                    "tags": Object {
                      "items": Object {
                        "properties": Object {
                          "id": Object {
                            "format": "int64",
                            "type": "integer",
                          },
                          "name": Object {
                            "type": "string",
                          },
                        },
                        "type": "object",
                        "xml": Object {
                          "name": "Tag",
                        },
                      },
                      "type": "array",
                      "xml": Object {
                        "name": "tag",
                        "wrapped": true,
                      },
                    },
                  },
                  "required": Array [
                    "name",
                    "photoUrls",
                  ],
                  "type": "object",
                  "xml": Object {
                    "name": "Pet",
                  },
                },
              },
            },
            "description": "successful operation",
          },
          "400": Object {
            "description": "Invalid ID supplied",
          },
          "404": Object {
            "description": "Pet not found",
          },
          "default": Object {
            "description": "successful response",
          },
        },
        "security": Array [
          Object {
            "api_key": Array [],
          },
        ],
        "summary": "Find pet by ID",
        "tags": Array [
          "pet",
        ],
      },
    },
    "/user": Object {
      "post": Object {
        "description": "This can only be done by the logged in user.",
        "operationId": "createUser",
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "properties": Object {
                  "email": Object {
                    "type": "string",
                  },
                  "firstName": Object {
                    "type": "string",
                  },
                  "id": Object {
                    "format": "int64",
                    "type": "integer",
                  },
                  "lastName": Object {
                    "type": "string",
                  },
                  "password": Object {
                    "type": "string",
                  },
                  "phone": Object {
                    "type": "string",
                  },
                  "userStatus": Object {
                    "description": "User Status",
                    "format": "int32",
                    "type": "integer",
                  },
                  "username": Object {
                    "type": "string",
                  },
                },
                "type": "object",
                "xml": Object {
                  "name": "User",
                },
              },
            },
          },
          "description": "Created user object",
          "required": true,
        },
        "responses": Object {
          "default": Object {
            "description": "successful operation",
          },
        },
        "summary": "Create user",
        "tags": Array [
          "user",
        ],
      },
    },
  },
  "servers": Array [
    Object {
      "url": "http://petstore.swagger.io/v2",
    },
  ],
}
`;
